author-microservice/src/main/deployment/istio-quarkus.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: author-quarkus
spec:
  hosts:
  - author-quarkus
  http:
  - route:
    - destination:
        host: author-quarkus
        subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: author-quarkus
spec:
  host: author-quarkus
  subsets:
  - name: v1
    labels:
      version: v1
---
